--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     build:
       # Here we define that it should build from the current directory
       context: .
+    tty:
+      true
     environment:
       # Variables to connect to our Postgres server
       PGUSER: postgres
