--- a/assets/package.json
+++ b/assets/package.json
@@ -7,10 +7,12 @@
     "watch": "webpack --mode development --watch"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@types/phoenix": "^1.5.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
@@ -18,18 +20,20 @@
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^8.0.2",
+    "source-map-loader": "^2.0.1",
     "terser-webpack-plugin": "^2.3.2",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "@types/phoenix": "^1.5.1",
-    "source-map-loader": "^2.0.1",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.2.2",
+    "@material-ui/core": "^4.11.3",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "react-hook-form": "^6.15.4",
+    "react-router-dom": "^5.2.0"
   }
 }
